# haskellSkeleton

./: .gitignore  CMakeLists.txt  README.md
App/: AppState.hs  CMakeLists.txt  Main.hs  package.json
Foreign/: CMakeLists.txt
Foreign/C/: ArgPassing.hs  CMakeLists.txt  StringArray.hs
Handlers/: CMakeLists.txt  Echo.hs
Options/: CMakeLists.txt  LogOptions.hs
Routes/: CMakeLists.txt  Routes.hs
SampleApp/: CMakeLists.txt  CommandLineOptions.hs  Main.hs  package.json
SnapletSample/: CMakeLists.txt  Handlers.hs  Init.hs  Options.hs  Routes.hs  State.hs
System/: CMakeLists.txt  Logging.hs
TestCLib/: CMakeLists.txt  test.c  test.h
TestFFI/: CMakeLists.txt  ConstBindings.hsc  TestWrapper.hs
TestLib/: CMakeLists.txt  TestModule.hs
app/: CMakeLists.txt  Main.hs  package.json
build-scripts/: generateCabal.py
cmakemodules/: FindHaskell.cmake  HaskellMacros.cmake
doc/: CLibraries.md
python_modules/: appUtils.py  logUtils.py
testMain/: CMakeLists.txt  Main.hs  README.md  main.hs  package.json  testMain.cabal
